src/objects/Workspace__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This text will come at top left side.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing activity</label>
        <referenceTo>Marketing_activity__c</referenceTo>
        <relationshipName>Workspaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Workspaces_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>html_description__c</fullName>
        <label>Presentation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>oldId__c</fullName>
        <label>oldId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Workspaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tempId__c</fullName>
        <label>tempId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Presentation</label>
    <nameField>
        <label>Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>